--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "yellowcake",
-  "HomePage": "https://yellowcake.netlify.com/",
+  "name": "bluflamingo",
+  "HomePage": "https://bluflamingo.netlify.com/",
   "description": "An opinionated starter project for creating lightning-fast websites with Gatsby v2 and Netlify CMS v2",
   "version": "2.0.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/thriveweb/yellowcake"
+    "url": "https://github.com/thriveweb/bluflamingo"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.18",
+    "@fortawesome/free-solid-svg-icons": "^5.8.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@reach/router": "^1.2.1",
+    "bootstrap": "^4.3.1",
     "date-fns": "^1.30.1",
     "dom-form-serializer": "^1.0.7",
     "gatsby": "^2.0.97",
@@ -39,6 +43,7 @@
     "postcss-preset-env": "^6.5.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.7.0",
     "react-feather": "^1.1.5",
     "react-helmet": "^5.2.0",
